# uxdrift

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: paia-os-steps.json
tests/: test_env.py  test_llm_parse.py  test_llm_prompt.py  test_pov.py  test_report_md.py  test_wg_spec.py  test_workgraph_choose_task.py
uxdrift/: __main__.py  cli.py  report.py  types.py  wg_spec.py
uxdrift/llm/: critique.py  pov.py  prompt.py
uxrift/: __main__.py  cli.py  env.py  github.py  playwright_runner.py  report.py  wg_spec.py  workgraph.py
uxrift/llm/: critique.py  openai_compat.py  parse.py  prompt.py
