[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uxdrift"
version = "0.1.0"
description = "Playwright + LLM UX evaluation sidecar (Speedrift-adjacent)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "playwright>=1.58.0",
]

[project.scripts]
uxdrift = "uxdrift.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["uxdrift*"]
